Fix shard modal display on mobile

--- a/src/styles/shards.less
+++ b/src/styles/shards.less
@@ -1,9 +1,4 @@
 #shardModal{
-    .modal-dialog {
-        width: 80%;
-        max-width: 800px;
-    }
-
     td {
         vertical-align: middle;
 
